Search Pagination, JWT, Register, Login

--- a/BlazorEcommerce/Client/Shared/Search.razor
+++ b/BlazorEcommerce/Client/Shared/Search.razor
@@ -39,7 +39,7 @@
 
     public void SearchProducts()
     {
-        NavigarionManager.NavigateTo($"search/{searchText}");
+        NavigarionManager.NavigateTo($"search/{searchText}/1");
     }
 
     public async Task HandleSearch(KeyboardEventArgs args)
