--- a/BlazorEcommerce/Client/Shared/ShopLayout.razor
+++ b/BlazorEcommerce/Client/Shared/ShopLayout.razor
@@ -3,7 +3,10 @@
 <div class="page">
     <main>
         <div class="top-row px-2">
+            <HomeButton />
             <Search />
+            <UserButton />
+            <CartCounter />
         </div>
 
         <div class="nav-menu">
