--- a/BlazorEcommerce/Client/Shared/UserButton.razor
+++ b/BlazorEcommerce/Client/Shared/UserButton.razor
@@ -1,12 +1,26 @@
-﻿<div class="dropdown">
+﻿@inject ILocalStorageService LocalStorage
+@inject AuthenticationStateProvider AuthStateProvider
+@inject NavigationManager NavigationManager
+@inject ICartService CartService
+
+<div class="dropdown">
     <button @onclick="ToggleUserMenu"
             @onfocusout="HideUserMenu"
             class="btn btn-secondary dropdown-toggle user-button">
         <i class="oi oi-person"></i>
     </button>
     <div class="dropdown-menu dropdown-menu-right @UserMenuCssClass">
-        <a href="login" class="dropdown-item">Login</a>
-        <a href="register" class="dropdown-item">Register</a>
+        <AuthorizeView>
+            <Authorized>
+                <a href="profile" class="dropdown-item">Profile</a>
+                <hr />
+                <button class="dropdown-item" @onclick="Logout">Logout</button>
+            </Authorized>
+            <NotAuthorized>
+                <a href="login?returnUrl=@NavigationManager.ToBaseRelativePath(NavigationManager.Uri)" class="dropdown-item">Login</a>
+                <a href="register" class="dropdown-item">Register</a>
+            </NotAuthorized>
+        </AuthorizeView>        
     </div>
 </div>
 
@@ -15,16 +29,23 @@
 
     private string UserMenuCssClass => showUserMenu ? "show-menu" : null;
 
-    private void ToggleUserMenu() 
+    private void ToggleUserMenu()
     {
         showUserMenu = !showUserMenu;
 
     }
 
-    private async Task HideUserMenu() 
+    private async Task HideUserMenu()
     {
         await Task.Delay(200);
         showUserMenu = false;
     }
 
+    private async Task Logout()
+    {
+        await LocalStorage.RemoveItemAsync("authToken");
+        await CartService.GetCartItemsCount();
+        await AuthStateProvider.GetAuthenticationStateAsync();
+        NavigationManager.NavigateTo("/");
+    }
 }
