--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -14,4 +14,6 @@
 @using BlazorEcommerce.Client.Services.CartService;
 @using Blazored.LocalStorage;
 @using BlazorEcommerce.Client.Services.AuthService;
+@using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.AspNetCore.Authorization;
 
