--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -10,6 +10,10 @@
 {
     <span>@message</span>
 }
+else if (orderPlaced)
+{
+    <span>Thank you for your order! You can check your orders <a href="orders">here</a>. </span>
+}
 else
 {
     <div>
@@ -44,9 +48,11 @@ else
 @code {
     List<BlazorEcommerce.Shared.DTO.CartProductResponse> cartProducts = null;
     string message = "Loading cart ...";
+    bool orderPlaced = false;
 
     protected override async Task OnInitializedAsync()
     {
+        orderPlaced = false;
         await LoadCart();
     }
 
@@ -84,5 +90,7 @@ else
     private async Task PlaceOrder() 
     {
         await OrderService.PlaceOrder();
+        await CartService.GetCartItemsCount();
+        orderPlaced = true;
     }
 }
