--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cart"
 @inject ICartService CartService
 @inject IOrderService OrderService
+@inject NavigationManager NavigationManager
 
 <PageTitle>Shopping Cart</PageTitle>
 
@@ -9,10 +10,6 @@
 @if (cartProducts == null || cartProducts.Count == 0)
 {
     <span>@message</span>
-}
-else if (orderPlaced)
-{
-    <span>Thank you for your order! You can check your orders <a href="orders">here</a>. </span>
 }
 else
 {
@@ -39,7 +36,7 @@ else
             Total (@cartProducts.Count()): €@cartProducts.Sum(product => product.Price * product.Quantity);
         </div>
     </div>
-    <button @onclick="PlaceOrder" class="btn btn-success float-end mt-1">Place Order</button>
+    <button @onclick="PlaceOrder" class="btn btn-success float-end mt-1">Checkout</button>
 }
 
 
@@ -48,11 +45,9 @@ else
 @code {
     List<BlazorEcommerce.Shared.DTO.CartProductResponse> cartProducts = null;
     string message = "Loading cart ...";
-    bool orderPlaced = false;
 
     protected override async Task OnInitializedAsync()
     {
-        orderPlaced = false;
         await LoadCart();
     }
 
@@ -89,8 +84,8 @@ else
 
     private async Task PlaceOrder() 
     {
-        await OrderService.PlaceOrder();
-        await CartService.GetCartItemsCount();
-        orderPlaced = true;
+        string url = await OrderService.PlaceOrder();
+        NavigationManager.NavigateTo(url);
+        
     }
 }
