--- a/BlazorEcommerce/Client/Pages/Cart.razor
+++ b/BlazorEcommerce/Client/Pages/Cart.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cart"
 @inject ICartService CartService
 @inject IOrderService OrderService
+@inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 
 <PageTitle>Shopping Cart</PageTitle>
@@ -36,6 +37,13 @@ else
             Total (@cartProducts.Count()): €@cartProducts.Sum(product => product.Price * product.Quantity);
         </div>
     </div>
+    @if (isAuthenticated)
+    {
+        <div>
+            <h5>Delivery Address</h5>
+            <AddressForm />
+        </div>  
+    }
     <button @onclick="PlaceOrder" class="btn btn-success float-end mt-1">Checkout</button>
 }
 
@@ -45,9 +53,11 @@ else
 @code {
     List<BlazorEcommerce.Shared.DTO.CartProductResponse> cartProducts = null;
     string message = "Loading cart ...";
+    bool isAuthenticated = false;
 
     protected override async Task OnInitializedAsync()
     {
+        isAuthenticated = await AuthService.IsUserAuthenticated();
         await LoadCart();
     }
 
@@ -82,10 +92,10 @@ else
         await CartService.UpdateQuantity(product);
     }
 
-    private async Task PlaceOrder() 
+    private async Task PlaceOrder()
     {
         string url = await OrderService.PlaceOrder();
         NavigationManager.NavigateTo(url);
-        
+
     }
 }
