--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -13,6 +13,7 @@
 @using BlazorEcommerce.Client.Services.CategoryService;
 @using BlazorEcommerce.Client.Services.CartService;
 @using BlazorEcommerce.Client.Services.OrderService;
+@using BlazorEcommerce.Client.Services.AddressService;
 @using Blazored.LocalStorage;
 @using BlazorEcommerce.Client.Services.AuthService;
 @using Microsoft.AspNetCore.Components.Authorization;
