--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -14,6 +14,7 @@
 @using BlazorEcommerce.Client.Services.CartService;
 @using BlazorEcommerce.Client.Services.OrderService;
 @using BlazorEcommerce.Client.Services.AddressService;
+@using BlazorEcommerce.Client.Services.ProductTypeService;
 @using Blazored.LocalStorage;
 @using BlazorEcommerce.Client.Services.AuthService;
 @using Microsoft.AspNetCore.Components.Authorization;
