171. ProductType page + ProductType add/update on server.

--- a/BlazorEcommerce/Client/Shared/AdminMenu.razor
+++ b/BlazorEcommerce/Client/Shared/AdminMenu.razor
@@ -4,7 +4,8 @@
 @if (authorized)
 {
     <a href="admin/categories" class="dropdown-item">Categories</a>
-    <hr/>
+    <a href="admin/product-types" class="dropdown-item">Product Types</a>
+    <hr />
 }
 
 
