--- a/BlazorEcommerce/Client/Pages/Admin/Categories.razor
+++ b/BlazorEcommerce/Client/Pages/Admin/Categories.razor
@@ -51,10 +51,10 @@
                 <span>@(category.Visible ? "✔️" : "")</span>
             </div>
             <div class="col">
-                <button class="btn btn-primary" @onclick="(() => EditCategory(category))">
+                <button class="btn btn-primary" @onclick="@(() => EditCategory(category))">
                     <i class="oi oi-pencil"></i>
                 </button>
-                <button class="btn btn-primary" @onclick="(() => DeleteCategory(category.Id))">
+                <button class="btn btn-primary" @onclick="@(() => DeleteCategory(category.Id))">
                     <i class="oi oi-trash"></i>
                 </button>
             </div>
