--- a/BlazorEcommerce/Client/Pages/Admin/ProductTypes.razor
+++ b/BlazorEcommerce/Client/Pages/Admin/ProductTypes.razor
@@ -1,5 +1,7 @@
 ﻿@page "/admin/product-types"
 @inject IProductTypeService ProductTypeService
+@implements IDisposable
+@attribute [Authorize(Roles = "Admin")]
 
 <h3>ProductTypes</h3>
 
@@ -47,6 +49,12 @@
     protected override async Task OnInitializedAsync()
     {
         await ProductTypeService.GetProductTypes();
+        ProductTypeService.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        ProductTypeService.OnChange -= StateHasChanged;
     }
 
     private void EditProductType(ProductType productType)
@@ -57,11 +65,15 @@
 
     private void CreateNewProductType()
     {
-
+        editingProductType = ProductTypeService.CreateNewProductType();
     }
 
     private async Task UpdateProductType()
     {
-
+        if (editingProductType.IsNew)
+            await ProductTypeService.AddProductType(editingProductType);
+        else
+            await ProductTypeService.UpdateProductType(editingProductType);
+        editingProductType = new ProductType();
     }
 }
