--- a/BlazorEcommerce/Client/Shared/AdminMenu.razor
+++ b/BlazorEcommerce/Client/Shared/AdminMenu.razor
@@ -5,6 +5,7 @@
 {
     <a href="admin/categories" class="dropdown-item">Categories</a>
     <a href="admin/product-types" class="dropdown-item">Product Types</a>
+    <a href="admin/products" class="dropdown-item">Products</a>
     <hr />
 }
 
