--- a/BlazorEcommerce/Client/Pages/Admin/Products.razor
+++ b/BlazorEcommerce/Client/Pages/Admin/Products.razor
@@ -1,64 +1,72 @@
 ﻿@page "/admin/products"
 @inject IProductService ProductService
+@inject NavigationManager NavigationManager
 @attribute [Authorize(Roles = "Admin")]
 
 <h3>Products</h3>
 
 @if (ProductService.AdminProducts == null)
 {
-    <span>Loading products...</span>  
+    <span>Loading products...</span>
 }
 else
 {
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Product</th>
-            <th>Variant</th>
-            <th>Price</th>
-            <th>Visible</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <Virtualize Items="ProductService.AdminProducts" Context="product">
+    <button class="btn btn-primary float-end" @onclick="CreateProduct">
+        <i class="oi oi-plus">Add new product</i>
+    </button>
+    <table class="table">
+        <thead>
             <tr>
-                <td><img src="@product.ImageUrl" alt="product image" /></td>
-                <td>@product.Title</td>
-                <td>
-                    @foreach (var variant in product.Variants)
-                    {
-                        <span>@variant.ProductType.Name</span><br />
-                    }
-                </td>
-                <td>
-                    @foreach (var variant in product.Variants)
-                    {
-                        <span>@variant.Price</span><br />
-                    }
-                </td>
-                <td>@(product.Visible ? "✔️" : "")</td>
-                <td>
-                    <button class="btn btn-primary" @onclick="(() => EditProduct(product.Id))">
-                        <i class="oi oi-pencil"></i>
-                    </button>
-                </td>
+                <th></th>
+                <th>Product</th>
+                <th>Variant</th>
+                <th>Price</th>
+                <th>Visible</th>
+                <th></th>
             </tr>
-        </Virtualize>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <Virtualize Items="ProductService.AdminProducts" Context="product">
+                <tr>
+                    <td><img src="@product.ImageUrl" alt="product image" /></td>
+                    <td>@product.Title</td>
+                    <td>
+                        @foreach (var variant in product.Variants)
+                        {
+                            <span>@variant.ProductType.Name</span><br />
+                        }
+                    </td>
+                    <td>
+                        @foreach (var variant in product.Variants)
+                        {
+                            <span>@variant.Price</span><br />
+                        }
+                    </td>
+                    <td>@(product.Visible ? "✔️" : "")</td>
+                    <td>
+                        <button class="btn btn-primary" @onclick="(() => EditProduct(product.Id))">
+                            <i class="oi oi-pencil"></i>
+                        </button>
+                    </td>
+                </tr>
+            </Virtualize>
+        </tbody>
+    </table>
 }
 
-@code {      
+@code {
     protected override async Task OnInitializedAsync()
     {
         await ProductService.GetAdminProducts();
     }
 
-    void EditProduct(int productId) 
+    void EditProduct(int productId)
     {
-
+        NavigationManager.NavigateTo($"admin/product/{productId}");
     }
 
+    void CreateProduct()
+    {
+        NavigationManager.NavigateTo("admin/product");
+    }
 }
