--- a/BlazorEcommerce/Client/Pages/Admin/EditProduct.razor
+++ b/BlazorEcommerce/Client/Pages/Admin/EditProduct.razor
@@ -32,7 +32,22 @@ else
         <InputText id="imageUrl" @bind-Value="product.ImageUrl" class="form-control"></InputText>
     </div>
     <div class="mb-0">
-        <img src="@product.ImageUrl" alt="product image" />
+        @if (!string.IsNullOrEmpty(product.ImageUrl))
+        {
+            <img src="@product.ImageUrl" alt="product image" />
+        }
+        else
+        {
+            foreach (var image in product.Images)
+            {
+                <img src="@image.Data" alt="product image" />
+            }
+        }
+
+    </div>
+    <div class="mb-0">
+        <label for="images">Image(s)</label>
+        <InputFile id="images" multiple OnChange="OnFileChange" class="form-control"></InputFile>
     </div>
     <div class="mb-0">
         <label for="description">Description</label>
@@ -195,6 +210,19 @@ else
         {}*/
         await ProductService.DeleteProduct(product);
         NavigationManager.NavigateTo("admin/products");
-    
+
+    }
+
+    async Task OnFileChange(InputFileChangeEventArgs e)
+    {
+        var format = "image/png";
+        foreach (var image in e.GetMultipleFiles())
+        {
+            var resizedImage = await image.RequestImageFileAsync(format, 200, 200);
+            var buffer = new byte[resizedImage.Size];
+            await resizedImage.OpenReadStream().ReadAsync(buffer);
+            var imageData = $"data:{format};base64,{ Convert.ToBase64String(buffer)}";
+            product.Images.Add(new Image { Data = imageData });
+        }
     }
 }
