--- a/BlazorEcommerce/Client/Pages/Admin/EditProduct.razor
+++ b/BlazorEcommerce/Client/Pages/Admin/EditProduct.razor
@@ -41,6 +41,7 @@ else
             foreach (var image in product.Images)
             {
                 <img src="@image.Data" alt="product image" />
+                <button type="button" @onclick="(() => RemoveImage(image.Id))">Remove</button>
             }
         }
 
@@ -223,6 +224,15 @@ else
             await resizedImage.OpenReadStream().ReadAsync(buffer);
             var imageData = $"data:{format};base64,{ Convert.ToBase64String(buffer)}";
             product.Images.Add(new Image { Data = imageData });
+        }
+    }
+
+    void RemoveImage(int id)
+    {
+        var image = product.Images.FirstOrDefault(i => i.Id == id);
+        if (image != null)
+        {
+            product.Images.Remove(image);
         }
     }
 }
