--- a/BlazorEcommerce/Client/_Imports.razor
+++ b/BlazorEcommerce/Client/_Imports.razor
@@ -19,4 +19,4 @@
 @using BlazorEcommerce.Client.Services.AuthService;
 @using Microsoft.AspNetCore.Components.Authorization;
 @using Microsoft.AspNetCore.Authorization;
-
+@using MudBlazor
