--- a/BlazorEcommerce/Client/Pages/Admin/Products.razor
+++ b/BlazorEcommerce/Client/Pages/Admin/Products.razor
@@ -28,7 +28,16 @@ else
         <tbody>
             <Virtualize Items="ProductService.AdminProducts" Context="product">
                 <tr>
-                    <td><img src="@product.ImageUrl" alt="product image" /></td>
+                    <td>
+                        @if (!string.IsNullOrEmpty(product.ImageUrl))
+                        {
+                            <img src="@product.ImageUrl" alt="product image" />
+                        }
+                        else if (product.Images.Count > 0)
+                        {
+                            <img src="@product.Images[0].Data" alt="Alternate Text" />
+                        }
+                    </td>
                     <td>@product.Title</td>
                     <td>
                         @foreach (var variant in product.Variants)
