--- a/BlazorEcommerce/Client/Shared/FeaturedProducts.razor
+++ b/BlazorEcommerce/Client/Shared/FeaturedProducts.razor
@@ -18,7 +18,14 @@ else
                 <div class="featured-product">
                     <div>
                         <a href="product/@product.Id">
-                            <img src="@product.ImageUrl" alt="Product Image" />
+                            @if (!string.IsNullOrEmpty(product.ImageUrl))
+                            {
+                                <img src="@product.ImageUrl" alt="Product Image" />
+                            }
+                            else if (product.Images.Count > 0)
+                            {
+                                <img src="@product.Images[0].Data" alt="Alternate Text" />
+                            }
                         </a>
                     </div>
                     <h4>
